Fix mobile logo size to not overflow device width

--- a/styles/modules/_main-content.sass
+++ b/styles/modules/_main-content.sass
@@ -33,8 +33,8 @@
 #logo
 	font-family: blenny, "arial black", sans-serif
 	// to avoid conflicting with the sass min/max function, capitalize them
-	font-size: Max(86px, Min(120px, 15vw))
-	line-height: Max(74px, Min(110px, 13vw))
+	font-size: Max(78px, Min(120px, 15vw))
+	line-height: Max(66px, Min(110px, 13vw))
 	text-align: center
 	white-space: nowrap
 	+hyphens(none)
